Fix sonar issue